fix: Adjust margin in stylesPrensa.css for test4.astro
Addressing the new layout issue of being over prensa page buttons.

--- a/src/Styles/stylesPrensa.css
+++ b/src/Styles/stylesPrensa.css
@@ -9,7 +9,7 @@
 }
 
 .center-vertical {
-    margin-top: 10%;
+    margin-top: 15%;
     margin-bottom: 10%;
     
 
